# clinnexus

./: .gitignore  DEPLOYMENT.md  Makefile  benchmark_summary.csv  clinnexus.key  clinnexus.key.pub  docker-compose.prod.yml  docker-compose.yml  env.prod.example  pyproject.toml  repo_structure.txt
backend/: BACKEND_SETUP.md  DATABASE_SETUP.md  Dockerfile  Dockerfile.prod  alembic.ini  cluster_ru_default_section.json  clusters.json  clusters_en.json  clusters_ru.json  example.env  examples_data.sql  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_prod_skeleton.py  0003_make_document_version_file_fields_nullable.py  0004_add_document_language.py  0005_unique_fact_evidence.py  0006_add_section_taxonomy.py  0007_rename_section_key_to_target_section.py  __init__.py  (+16 more)
backend/app/: main.py
backend/campaign_results_/: campaign_details.csv  campaign_summary.json
backend/campaign_results_20251222_013556/: campaign_details.csv  campaign_summary.json
backend/tests/: conftest.py  test_chunks_created.py  test_cluster_headings.py  test_evaluate_mapping_metrics.py  test_export_heading_corpus.py  test_fact_conflict_detector.py  test_fact_conflict_integration.py  test_heading_detector.py  test_ingestion_docx.py  test_ingestion_lifecycle.py  test_llm_assist_mapping.py  test_migration_0007_section_key_rename.py  test_passport_tuning_mapping.py  test_section_mapping.py  test_section_mapping_v2_signals.py  test_soa_extraction.py  test_source_zone_classifier.py  test_storage.py  test_upload_language_detection.py
backend/tools/: __init__.py
(+291 files in other folders)
